# SimpleBackendServiceCpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SimpleBackendServiceCpp.cpp  SimpleBackendServiceCpp.h  vcpkg-configuration.json  vcpkg.json
proto/: jobs.proto
src/: main.cpp
src/api/: api_job_request.h
src/core/: executor.cpp  executor.h  job.h  job_handler.h  job_queue.cpp  job_queue.h  job_result.h
src/handlers/: print_handler.h  print_handler.hpp  quadratic_equation_handler.h  quadratic_equation_handler.hpp
src/server/: grpc_job_service.cpp  grpc_job_service.h  grpc_server.cpp  grpc_server.h  main.cpp  rest_server.cpp  rest_server.h  server.h
tests/: CMakeLists.txt
tests/src/: test_handler.hpp  test_utils.cpp  test_utils.h
tests/src/handlers/: quadratic_equation_handler_test.cpp
tests/src/main/: executor_registration_test.cpp  executor_run_test.cpp  executor_test.cpp
